--- a/public/package.json
+++ b/public/package.json
@@ -20,7 +20,8 @@
   "dependencies": {
     "react": "^16.3.2",
     "react-dom": "^16.3.2",
-    "react-router-dom": "^4.2.2"
+    "react-router-dom": "^4.2.2",
+    "semantic-ui-react": "^0.80.0"
   },
   "devDependencies": {
     "babel-core": "^6.26.3",
