--- a/public/.eslintrc.json
+++ b/public/.eslintrc.json
@@ -28,6 +28,7 @@
     "jsx-a11y/anchor-is-valid": [ "error", {
       "components": [ "Link" ],
       "specialLink": [ "to" ]
-    }]
+    }],
+    "react/require-default-props": "off"
   }
 }
