--- a/public/package.json
+++ b/public/package.json
@@ -2,22 +2,27 @@
   "name": "file-transfer",
   "version": "0.1.0",
   "description": "Frontend client for file-transfer",
-  "main": "app.js",
   "private": true,
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "start": "webpack-dev-server --mode development --open --display-error-details",
     "build:prod": "webpack --mode production",
-    "build:dev": "webpack --mode development"
+    "build:dev": "webpack --mode development",
+    "eslint:fix": "eslint --fix ./js/** --ext .js,.jsx"
   },
   "author": "Johnson Huang",
   "babel": {
     "presets": [
       "env",
       "react"
+    ],
+    "plugins": [
+      "transform-object-rest-spread"
     ]
   },
   "dependencies": {
+    "filesize": "^3.6.1",
+    "prop-types": "^15.6.1",
     "react": "^16.3.2",
     "react-dom": "^16.3.2",
     "react-router-dom": "^4.2.2",
@@ -26,6 +31,7 @@
   "devDependencies": {
     "babel-core": "^6.26.3",
     "babel-loader": "^7.1.4",
+    "babel-plugin-transform-object-rest-spread": "^6.26.0",
     "babel-preset-env": "^1.6.1",
     "babel-preset-react": "^6.24.1",
     "circular-dependency-plugin": "^5.0.2",
@@ -37,8 +43,8 @@
     "eslint-plugin-react": "^7.7.0",
     "html-webpack-plugin": "^3.2.0",
     "style-loader": "^0.21.0",
-    "webpack": "^4.7.0",
-    "webpack-cli": "^2.1.2",
+    "webpack": "^4.8.1",
+    "webpack-cli": "^2.1.3",
     "webpack-dev-server": "^3.1.4"
   }
 }
