--- a/public/.eslintrc.json
+++ b/public/.eslintrc.json
@@ -25,6 +25,8 @@
     "no-prototype-builtins":"off",
     "no-use-before-define": ["error", { "functions": false }],
     "no-bitwise":"warn",
+    "semi": ["error", "never"],
+    "no-unexpected-multiline":"error",
     "jsx-a11y/anchor-is-valid": [ "error", {
       "components": [ "Link" ],
       "specialLink": [ "to" ]
