--- a/public/package.json
+++ b/public/package.json
@@ -21,6 +21,7 @@
     ]
   },
   "dependencies": {
+    "axios": "^0.18.0",
     "filesize": "^3.6.1",
     "prop-types": "^15.6.1",
     "react": "^16.3.2",
@@ -32,6 +33,7 @@
     "babel-core": "^6.26.3",
     "babel-loader": "^7.1.4",
     "babel-plugin-transform-object-rest-spread": "^6.26.0",
+    "babel-polyfill": "^6.26.0",
     "babel-preset-env": "^1.6.1",
     "babel-preset-react": "^6.24.1",
     "circular-dependency-plugin": "^5.0.2",
@@ -41,8 +43,10 @@
     "eslint-plugin-import": "^2.11.0",
     "eslint-plugin-jsx-a11y": "^6.0.3",
     "eslint-plugin-react": "^7.7.0",
+    "file-loader": "^1.1.11",
     "html-webpack-plugin": "^3.2.0",
     "style-loader": "^0.21.0",
+    "url-loader": "^1.0.1",
     "webpack": "^4.8.1",
     "webpack-cli": "^2.1.3",
     "webpack-dev-server": "^3.1.4"
