--- a/client/package.json
+++ b/client/package.json
@@ -5,9 +5,8 @@
   "private": true,
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "webpack-dev-server --mode development --open --display-error-details",
-    "build:prod": "webpack --mode production",
-    "build:dev": "webpack --mode development",
+    "start": "webpack-dev-server --mode development --open --config webpack.dev.config.js",
+    "build:prod": "webpack --mode production --config webpack.prod.config.js",
     "eslint:fix": "eslint --fix ./js/** --ext .js,.jsx"
   },
   "author": "Johnson Huang",
