--- a/deployment/retifish.service
+++ b/deployment/retifish.service
@@ -1,8 +1,9 @@
+### Systemd config for Retifish ###
 # place in /lib/systemd/system
 
 [Unit]
 Description=retifish
-ConditionPathExists=/home/retifish/retifish_server
+ConditionPathExists=/home/retifish/retifish_service
 After=network.target
  
 [Service]
@@ -16,7 +17,7 @@ RestartSec=10
 startLimitIntervalSec=60
 
 WorkingDirectory=/home/retifish
-ExecStart=/home/retifish/retifish_server
+ExecStart=/home/retifish/retifish_service
 
 # make sure log directory exists and owned by syslog
 PermissionsStartOnly=true
