--- a/deployment/retifish.conf
+++ b/deployment/retifish.conf
@@ -1,5 +1,5 @@
 ### NGINX config for Retifish ###
-# place in /etc/nginx/sites-available
+# place in /etc/nginx/sites-available/
 # ln -s /etc/nginx/sites-available/retifish.conf /etc/nginx/sites-enabled/retifish.conf
 # systemctl restart nginx
 
@@ -41,28 +41,12 @@ server {
 server {
   listen 443 ssl http2;
   listen [::]:443 ssl http2;
-
   server_name service.retifish.com;
-
-  # if ($request_method = 'OPTIONS') {
-  #   add_header 'Access-Control-Allow-Origin' '*';
-  #   add_header 'Access-Control-Allow-Methods' 'GET, POST, OPTIONS';
-  #   # Custom headers and headers various browsers *should* be OK with but aren't
-  #   add_header 'Access-Control-Allow-Headers' 'DNT,User-Agent,X-Requested-With,If-Modified-Since,Cache-Control,Content-Type,Range';
-  #   # Tell client that this pre-flight info is valid for 20 days
-  #   add_header 'Access-Control-Max-Age' 1728000;
-  #   add_header 'Content-Type' 'text/plain; charset=utf-8';
-  #   add_header 'Content-Length' 0;
-  #   return 204;
-  # }
-
-  # add_header 'Access-Control-Allow-Origin' 'https://www.retifish.com';
-  # add_header 'Access-Control-Allow-Methods' 'GET, POST, OPTIONS';
-  # add_header 'Access-Control-Allow-Headers' 'DNT,User-Agent,X-Requested-With,If-Modified-Since,Cache-Control,Content-Type,Range';
-  # add_header 'Access-Control-Expose-Headers' 'Content-Length,Content-Range,Content-Disposition';
 
   location /api {
     proxy_pass http://localhost:9090;
+
+    # TODO protect info
   }
   
   location /websocket {
